--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Ignore Gradle project-specific cache directory
-.gradle
+.*
+!.gitignore
+bin
+build
+gradle
+gradlew*
+settings.gradle
 
 # Ignore Gradle build output directory
 build
